syntax = "proto3";

package event.review;

option go_package = "github.com/Yux77Yux/platform_backend/generated/event/review;";

enum Exchange {
  EXCHANGE_COMMENT_REVIEW = 0;
  EXCHANGE_USER_REVIEW = 1;
  EXCHANGE_CREATION_REVIEW = 2;
  EXCHANGE_NEW_REVIEW = 3;
  EXCHANGE_UPDATE = 4;
  EXCHANGE_BATCH_UPDATE = 5;
  EXCHANGE_PEND_CREATION = 6;
  EXCHANGE_UPDATE_USER_STATUS = 7;
  EXCHANGE_UPDATE_CREATION_STATUS = 8;
  EXCHANGE_DELETE_CREATION = 9;
  EXCHANGE_DELETE_COMMENT = 10;
}

enum Queue {
  QUEUE_COMMENT_REVIEW = 0;
  QUEUE_USER_REVIEW = 1;
  QUEUE_CREATION_REVIEW = 2;
  QUEUE_NEW_REVIEW = 3;
  QUEUE_UPDATE = 4;
  QUEUE_BATCH_UPDATE = 5;
  QUEUE_PEND_CREATION = 6;
}

enum RoutingKey {
  KEY_COMMENT_REVIEW = 0;
  KEY_USER_REVIEW = 1;
  KEY_CREATION_REVIEW = 2;
  KEY_NEW_REVIEW = 3;
  KEY_UPDATE = 4;
  KEY_BATCH_UPDATE = 5;
  KEY_PEND_CREATION = 6;
  KEY_UPDATE_USER_STATUS = 7;
  KEY_UPDATE_CREATION_STATUS = 8;
  KEY_DELETE_CREATION = 9;
  KEY_DELETE_COMMENT = 10;
}